After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752803 - asfdemux: fix assertion error when codec_data is not present in structure
asfdemux: fix assertion error when codec_data is not present in structure
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-24 01:04 UTC by Vineeth
Modified: 2015-08-16 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix assertion error (2.03 KB, patch)
2015-07-24 01:09 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-07-24 01:04:46 UTC
When discovering a particular asf file, caps structure doesn't have codec_data, and this was not being checked before using the same, resulting in assertion error
Comment 1 Vineeth 2015-07-24 01:09:18 UTC
Created attachment 308045 [details] [review]
fix assertion error
Comment 2 Tim-Philipp Müller 2015-07-24 10:54:45 UTC
The patch looks fine, but I think it might be incomplete.

Could you make such a file available please?
If you can't make the whole file available, perhaps you could make the first 1MB available with

 head --bytes=1M foo.asf > foo-head.asf
Comment 3 Vineeth 2015-07-27 01:13:31 UTC
i wont be able to send the file :( due to some permission issues in office.

this is happening because for this file, the video->size is coming as 40 while getting the video stream using gst_asf_demux_get_stream_video, 
which means
"object is a video stream with 0 bytes of additional data"

and while creating the caps using gst_riff_create_video_caps, this extra data is being passed.
and hence the codec_data is not present.

If file is really needed, i can check, if i can send across the file to Thiago and he can check the issue maybe..
Comment 4 Tim-Philipp Müller 2015-07-30 12:41:24 UTC
Surely you can make the first 500k or 1MB available, enough for the headers and the first 1-2 frames? That's all that's needed really.


commit 5e7d0a828552dcc6f6ddf2bf08cf318a7cbd1d8d
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Fri Jul 24 10:08:34 2015 +0900

    asfdemux: fix assertion error when codec_data is not present in structure
    
    When discovering a particular asf file, caps structure doesn't have
    codec_data, and this was not being checked before using the same,
    resulting in assertion error
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752803