asfdemux: fix assertion error when codec_data is not present in structure

When discovering a particular asf file, caps structure doesn't have
codec_data, and this was not being checked before using the same,
resulting in assertion error

https://bugzilla.gnome.org/show_bug.cgi?id=752803